Work on data collection for ham/spam classifier

--- a/Data Gathering/clean_link_finder.ipynb
+++ b/Data Gathering/clean_link_finder.ipynb
@@ -52,16 +52,16 @@
     "\n",
     "# Search terms\n",
     "search_queries = [\n",
-    "    \"minecraft tutorial survival vanilla new world lets play\",\n",
-    "    \"minecraft tutorial hardcore new world lets play\",\n",
-    "    \"minecraft how to survival vanilla new world lets play\",\n",
-    "    \"minecraft tutorial start survival lets play\",\n",
-    "    \"minecraft lets play tutorial survival new world\",\n",
-    "    \"minecraft lets play tutorial hardcore new world\",\n",
-    "    \"minecraft guide walkthrough survival new world\",\n",
-    "    \"minecraft how to first night playthrough\",\n",
-    "    \"minecraft tutorial lets play no webcam\",\n",
-    "    \"minecraft survival hardcore tutorial how to guide learn basics beginner lets play walkthrough gameplay new world first night first day\"\n",
+    "    \"minecraft tutorial survival vanilla new world lets play 1.16\",\n",
+    "    \"minecraft tutorial hardcore new world lets play 1.16\",\n",
+    "    \"minecraft how to survival vanilla new world lets play 1.16\",\n",
+    "    \"minecraft tutorial first start survival lets play 1.16\",\n",
+    "    \"minecraft lets play tutorial survival new world 1.16\",\n",
+    "    \"minecraft lets play tutorial hardcore new world 1.16\",\n",
+    "    \"minecraft guide walkthrough survival new world 1.16\",\n",
+    "    \"minecraft how to first night playthrough 1.16\",\n",
+    "    \"minecraft tutorial lets play no webcam 1.16\",\n",
+    "    \"minecraft survival hardcore tutorial how to guide learn basics beginner lets play walkthrough gameplay new world first night first day 1.16\"\n",
     "]\n",
     "\n",
     "# Title/tags\n",
@@ -76,7 +76,38 @@
     "    'bed rock',\n",
     "    'guide',\n",
     "    'no commentary',\n",
-    "    'creative'\n",
+    "    'creative',\n",
+    "    'multiplayer',\n",
+    "    'server',\n",
+    "    'playstation',\n",
+    "    'timelapse',\n",
+    "    'animation',\n",
+    "    'minecraft pe',\n",
+    "    'pocket edition',\n",
+    "    'bedrock edition',\n",
+    "    'skyblock',\n",
+    "    'realistic',\n",
+    "    'shader',\n",
+    "    'how to install',\n",
+    "    'how to download',\n",
+    "    'realmcraft',\n",
+    "    'realms',\n",
+    "    'animation',\n",
+    "    'animatic',\n",
+    "    'music video',\n",
+    "    'movie',\n",
+    "    'friend',\n",
+    "    'parody',\n",
+    "    'island',\n",
+    "    'squad',\n",
+    "    'hack',\n",
+    "    'battle',\n",
+    "    'minecraft but',\n",
+    "    'minecraft, but',\n",
+    "    \n",
+    "    'no commentary', # filters to ensure useful langauge input\n",
+    "    'silent',\n",
+    "    'asmr',    \n",
     "]\n",
     "\n",
     "title_inclusion_terms = [\n",
@@ -87,6 +118,21 @@
     "    ['first','begin','start','fresh','new'],\n",
     "    ['world','game','play','day','night']\n",
     "] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b70bbda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# re-check which files are download\n",
+    "import os\n",
+    "\n",
+    "# get all downloaded video (720 20 hz 10 mins)\n",
+    "downloaded_videos = os.listdir('DATASET/all/videos')\n",
+    "downloaded_videos = [filename.split('.')[0:-1] for filename in downloaded_videos]"
    ]
   },
   {
@@ -104,32 +150,26 @@
     "all_MC_videos = []\n",
     "blacklist=[]\n",
     "\n",
-    "YDL_OPTIONS = {'noplaylist':'True', 'Download':\"False\", 'ignoreerrors': 'True'}\n",
+    "YDL_OPTIONS = {'noplaylist':'True', 'Download':\"False\", 'ignoreerrors':'True', 'list_subs':True}\n",
     "with YoutubeDL(YDL_OPTIONS) as ydl:\n",
     "    for search_query in search_queries:\n",
     "\n",
     "        # get top search results for query, add results to top_MC_videos[]\n",
     "        search_results = ydl.extract_info(f\"ytsearchall:{search_query}\", download=False)\n",
     "        for result in search_results['entries']:\n",
-    "            print()\n",
     "            top_MC_videos.append(result)\n",
     "\n",
     "        # get channels from top search results for query, add results to MC_channels[]\n",
     "        for link in top_MC_videos:\n",
     "            channel = result['channel'] #ydl.extract_info(result['SiD'], download=False)['channel']\n",
-    "            if not (channel in MC_channels):\n",
-    "                MC_channels.append(channel)\n",
-    "\n",
+    "            MC_channels.append(channel)\n",
     "\n",
     "        # get videos from collected channels, check if minecraft related and save\n",
     "        for channel in MC_channels:\n",
     "            channel_videos = ydl.extract_info(f'https://www.youtube.com/channel/{channel}/videos')\n",
     "            for video in channel_videos:\n",
-    "                title = video.title\n",
-    "                if not (video in all_MC_videos) and title.lower().find('minecraft') > -1:\n",
-    "                    all_MC_videos.append(video)\n",
-    "\n",
-    "\n"
+    "                if not (video['id'] in downloaded_videos) and (video['duration']>=600) and (video['title'].lower().find('minecraft')>-1):\n",
+    "                    all_MC_videos.append(video)"
    ]
   },
   {
@@ -142,7 +182,10 @@
     "# load tokeniser for checking WPM as tokens/ms\n",
     "# load target LM's tokenizer\n",
     "from transformers import TransfoXLTokenizer\n",
-    "tokenizer = TransfoXLTokenizer.from_pretrained(\"transfo-xl-wt103\")"
+    "tokenizer = TransfoXLTokenizer.from_pretrained(\"transfo-xl-wt103\")\n",
+    "\n",
+    "\n",
+    "from textblob import TextBlob\n"
    ]
   },
   {
@@ -174,7 +217,15 @@
     "            for subterm in term:\n",
     "                if not subterm.lower() in title.lower():\n",
     "                    spam = True\n",
-    "            print(video['id'], 'spam=',spam)\n",
+    "        lang = TextBlob(title)\n",
+    "        if (lang.detect_language()) != 'en':         # get only English videos\n",
+    "            spam=True\n",
+    "        # Check for multiplayer in title [... with H..] e.g. \"playing minecraft with Harry\"\n",
+    "        if 'with' in title:\n",
+    "            char_after_with = title[title.lower().find('with') + 5]\n",
+    "            if char_after_with.lower() != char_after_with:\n",
+    "                spam = True\n",
+    "        print(video['id'], 'spam=',spam)\n",
     "\n",
     "    # CHECK TAGS AGAINST SPAM TAGS (remove ps3/xbox/console/bedrock/ps4/ps5/xbox series...\n",
     "    if not spam:\n",
@@ -184,20 +235,33 @@
     "                spam=True\n",
     "        print(tags, 'spam=',spam)\n",
     "\n",
-    "    # check transcript LANGAUGE and WPM\n",
+    "    # CHECK DESCRIPTION\n",
     "    if not spam:\n",
-    "        try:\n",
-    "            with YoutubeDL({\"list-subs\"}) as ydl:\n",
-    "                language = video.language\n",
-    "            if language != 'english':\n",
+    "        description = video['description']\n",
+    "        for term in exclusion_terms:\n",
+    "            if term in description:\n",
     "                spam=True\n",
-    "        except:\n",
-    "            pass\n",
-    "        print(language, 'spam=',spam)\n",
+    "        lang = TextBlob(description)\n",
+    "        if (lang.detect_language()) != 'en':         # get only English videos\n",
+    "            spam=True\n",
+    "\n",
+    "        print(description, 'spam=',spam)\n",
+    "\n",
+    "\n",
+    "    # check subtitles LANGAUGE and WPM\n",
+    "    if not spam:\n",
+    "        # check if subtitiles are available in English\n",
+    "        subtitles = video.get('subtitles')\n",
+    "        if not subtitles:\n",
+    "            subtitles = video.get('automatic_captions')\n",
+    "        # if subtitiles are available, check if english is available, if not, this video is not english\n",
+    "        if subtitles and not subtitles.get('en'):\n",
+    "            spam=True\n",
+    "        print(video['subtitles'], 'spam=',spam)\n",
     "        \n",
     "        # Check WPM. we dont want video with too high a WPM. LM can only fit so many words and we dont watn to use up all the context for a single minute of video. lower WPM also means we can use large D which lets LM see farther back in time. High WPM also may indicate multiplayer which is a very noisy langauge signal, especially since other person wont be seeing what is shown in the video, their langauge will be about something completely different.\n",
-    "        if video.hasTranscript:\n",
-    "            transcript = video.transcript\n",
+    "        if subtitles:\n",
+    "            transcript = subtitles\n",
     "            num_tokens = len(tokenizer(' '.join(transcript)))\n",
     "            video_mins = video.get_time()\n",
     "            WPM = num_tokens/video_mins     # WARNING: variable is called WPM as simplification, its actually tokens per minute\n",
