Video spam/ham classification progress
Also add some optimisations to the training loop (fp16, data parallel)

--- a/Data Gathering/clean_link_finder.ipynb
+++ b/Data Gathering/clean_link_finder.ipynb
@@ -52,16 +52,20 @@
     "\n",
     "# Search terms\n",
     "search_queries = [\n",
-    "    \"minecraft tutorial survival vanilla new world lets play 1.16\",\n",
+    "    \"minecraft tutorial survival vanilla new world lets play\",\n",
     "    \"minecraft tutorial hardcore new world lets play 1.16\",\n",
     "    \"minecraft how to survival vanilla new world lets play 1.16\",\n",
     "    \"minecraft tutorial first start survival lets play 1.16\",\n",
     "    \"minecraft lets play tutorial survival new world 1.16\",\n",
-    "    \"minecraft lets play tutorial hardcore new world 1.16\",\n",
+    "    \"minecraft lets play tutorial hardcore new world\",\n",
     "    \"minecraft guide walkthrough survival new world 1.16\",\n",
-    "    \"minecraft how to first night playthrough 1.16\",\n",
+    "    \"minecraft how to first night playthrough\",\n",
     "    \"minecraft tutorial lets play no webcam 1.16\",\n",
-    "    \"minecraft survival hardcore tutorial how to guide learn basics beginner lets play walkthrough gameplay new world first night first day 1.16\"\n",
+    "    \"minecraft survival hardcore tutorial how to guide learn basics beginner lets play walkthrough gameplay new world first night first day 1.16\",\n",
+    "    \"minecraft survival vanilla guide let's play\",\n",
+    "    \"minecraft vanilla survival let's play\",\n",
+    "    \"minecraft vanilla hardcore let's play\",\n",
+    "    \"minecraft early game lets play vanilla\"\n",
     "]\n",
     "\n",
     "# Title/tags\n",
@@ -104,7 +108,15 @@
     "    'battle',\n",
     "    'minecraft but',\n",
     "    'minecraft, but',\n",
-    "    \n",
+    "    'we',  # dont want multiplayer\n",
+    "\n",
+    "    'broke', #dont want hacks or glitches\n",
+    "    'glitch',\n",
+    "\n",
+    "    'end', # dont want late game\n",
+    "    'nether',\n",
+    "    'dimension',\n",
+    "\n",
     "    'no commentary', # filters to ensure useful langauge input\n",
     "    'silent',\n",
     "    'asmr',    \n",
@@ -2145,8 +2157,9 @@
     "            continue\n",
     "\n",
     "    # if clean, save link to file\n",
-    "    clean_links.append(video.link)\n",
-    "    clean_links_file.write(video.link)\n",
+    "    with open(,'a') as clean_links_file:\n",
+    "        clean_links.append(video.link)\n",
+    "        clean_links_file.write(video['id']])\n",
     "\n",
     "    # download video and scale to 128\n",
     "    os.system(dlp download video.link -ouput link.mp4)\n",
