video spam/ham collection

--- a/Data Gathering/clean_link_finder.ipynb
+++ b/Data Gathering/clean_link_finder.ipynb
@@ -171,10 +171,12 @@
     "        for result in search_results['entries']:\n",
     "            top_MC_videos.append(result)\n",
     "\n",
+    "        # ONLY GET CHANNELS SNOWBALL AFTER INITIAL CLEANING\n",
+    "        1/0\n",
     "        # get channels from top search results for query, add results to MC_channels[]\n",
-    "        for link in top_MC_videos:\n",
-    "            channel = result['channel'] #ydl.extract_info(result['SiD'], download=False)['channel']\n",
-    "            MC_channels.append(channel)\n",
+    "        #for link in top_MC_videos:\n",
+    "        #    channel = result['channel'] #ydl.extract_info(result['SiD'], download=False)['channel']\n",
+    "        #    MC_channels.append(channel)\n",
     "\n",
     "        # get videos from collected channels, check if minecraft related and save\n",
     "        for channel in MC_channels:\n",
