Finished frame spam/ham labelling; trained classifier

--- a/Data Gathering/clean_link_finder.ipynb
+++ b/Data Gathering/clean_link_finder.ipynb
@@ -38,7 +38,8 @@
     "import yt_dlp\n",
     "import matplotlib\n",
     "from yt_dlp import YoutubeDL\n",
-    "import torch as th"
+    "import torch as th\n",
+    "import cv2"
    ]
   },
   {
@@ -299,14 +300,22 @@
     "# load CLIP\n",
     "import clip\n",
     "from PIL import Image\n",
+    "import  pickle\n",
     "device = \"cuda\" if th.cuda.is_available() else \"cpu\"\n",
-    "model, preprocess = clip.load(\"RN50x64\", device=device)\n",
-    "with th.no_grad():\n",
-    "    image = preprocess(Image.open(\"CLIP.png\")).unsqueeze(0).to(device)\n",
-    "    image_features = model.encode_image(image)\n",
+    "CLIP, preprocess = clip.load(\"RN50x64\", device=device)\n",
+    "\n",
     "# LOAD SVM\n",
     "from sklearn import svm\n",
-    "classifier = \n",
+    "svm = pickle.load(open('SVM', 'rb'))\n",
+    "\n",
+    "def frames_to_class(frames):\n",
+    "    with th.no_grad():\n",
+    "        image = preprocess(frames).to(device)\n",
+    "        image_features = model.encode_image(image)\n",
+    "        estimations = svm.predict(image_features)\n",
+    "\n",
+    "        label = th.median(estimations)\n",
+    "        return label\n",
     "\n",
     "### LOAD AUDIO TRANSCRIBER\n",
     "from stable_whisper import load_model\n",
@@ -2097,66 +2106,63 @@
     }
    ],
    "source": [
+    "# go through REGEX cleaned links. CHECK VIDEO SPAM HAM. CHECK AUDIO SPAMHAM. \n",
+    "\n",
     "clean_links_file = open('clean_links','rw')\n",
     "blacklist = open('dirty_links','rw')\n",
     "clean_links = []\n",
+    "ydl_opts={'options_':longer_than_10_mins, 'download':False, 'fps':30}\n",
     "\n",
     "# want to download slowly to not get banned by google - dont use multiple workers\n",
     "for link in len(all_MC_videos):\n",
     "\n",
-    "    # asyncronous: keep checking if someone else is checking that file\n",
-    "    clean_links_file = open('clean_links','rw')\n",
-    "    lines = clean_links_file.readlines()\n",
-    "    if link in lines:\n",
+    "    # skip if video is already downloaded.\n",
+    "    if link in downloaded_videos:\n",
     "        continue\n",
+    "\n",
     "    spam=False\n",
     "\n",
     "    # get video samples & check spamham\n",
-    "        # SELECT RANDOM FRAMES AND CHEKC SPAM/HAM\n",
-    "        \n",
-    "        # download about 0.7 frames per minute\n",
-    "        frames_per_video = int((float(duration)/60.0)*0.7)\n",
-    "        for i in range(frames_per_video):\n",
-    "            random_sec = int(random.randint(0, duration))\n",
-    "            random_sec_formatted = \"*\"+s_to_HHmmss(random_sec-1)+\"-\"+s_to_HHmmss(random_sec)\n",
-    "            filename = video_link +\",\"+ str(random_sec)\n",
-    "            # DOWNLOAD SHORT VIDEO SECTION\n",
-    "            full_link = str(\"https://www.youtube.com/watch?v=%s\"%video_link)\n",
-    "            print(full_link)\n",
-    "            print(random_sec_formatted)\n",
-    "            os.system(\"/mnt/l/yt-dlp.exe --ffmpeg-location L:/ffmpeg-master-latest-win64-gpl/bin/ffmpeg.exe -f bestvideo[height=480] --download-sections %s --output Z:/Code/_DISSERTATION/code/spamham_samples/%s.webm %s\" %(random_sec_formatted, filename, full_link))\n",
-    "            \n",
-    "            # CROP VIDEO SECTION TO FIRST FRAME\n",
-    "            #\"https://www.youtube.com/watch?v={sID}\".format(sID=video_link)\n",
-    "            filename_ext = filename+'.webm'\n",
-    "            os.system('/mnt/l/ffmpeg-master-latest-win64-gpl/bin/ffmpeg.exe -i Z:/Code/_DISSERTATION/code/spamham_samples/%s -vcodec png -ss 0 -vframes 1 -an -f rawvideo \"Z:/Code/_DISSERTATION/code/spamham_samples/frames/%s.png\"' %(filename_ext, filename))\n",
-    "            try:\n",
-    "                os.remove('%s.webm' %filename)\n",
-    "            except:\n",
-    "                None\n",
-    "            #label = get_response(filename+\".jpg\")\n",
-    "            line = str(filename+\".jpg\" + \",\" + \"NULL\\n\")\n",
-    "\n",
-    "    stream = cv2.load(videofile)\n",
-    "    frame_index=0\n",
+    "    # download about 0.7 frames per minute                  #https://stackoverflow.com/questions/66272740/extract-specific-frames-of-youtube-video-without-downloading-video\n",
+    "    with yt_dlp.YoutubeDL(ydl_opts) as ydl:\n",
+    "        video=ydl.extract_info(link, download=False)\n",
+    "        formats = video['formats']\n",
+    "        duration = video['duration']\n",
+    "    # get video @ 3Hz\n",
+    "    print(\"Obtaining frames\")\n",
     "    frames = []\n",
-    "    for frame in stream:\n",
-    "        if frame_index%=7: # GET VIDEO AT 3 FPS\n",
-    "        frame = frame[:,:,-3]\n",
-    "        is_ham = classifier(frame)\n",
-    "        if not is_ham:\n",
-    "            spam=True\n",
-    "            stream.close()\n",
-    "            continue\n",
-    "        frame_index+=1\n",
-    "    # get audio sample & check spamham\n",
-    "    if not spam:\n",
-    "        ydl.getaudio(link, 00:00-00:20, download=audiofile)\n",
-    "        # check langauge, WPM\n",
-    "        language = model.detectlanguage(audiofile)\n",
-    "        if language != 'english':\n",
-    "            spam=True\n",
-    "            continue\n",
+    "    for format in formats:\n",
+    "        if format['format_note'] == '720p':\n",
+    "            fps = format['fps']\n",
+    "            url = format['url']\n",
+    "            num_frames = (fps*duration)-60 #cut off last second due to possible variation in fps.\n",
+    "\n",
+    "            cap = cv2.VideoCapture(url)\n",
+    "            \n",
+    "            frame_index=0\n",
+    "            while frame_index<num_frames:\n",
+    "                ret, frame = cap.read()\n",
+    "                if not ret:\n",
+    "                    break\n",
+    "                frames.append(frame)\n",
+    "                frame_index += fps/3   #Skip 300 frames i.e. 10 seconds for 30 fps\n",
+    "                cap.set(1, round(frame_index))\n",
+    "                if cv2.waitKey(30)&0xFF == ord('q'):\n",
+    "                    break\n",
+    "            cap.release()\n",
+    "        frames = th.cat(frames)\n",
+    "\n",
+    "\n",
+    "            \n",
+    "\n",
+    "        # get audio sample & check spamham\n",
+    "        if not spam:\n",
+    "            ydl.getaudio(link, 00:00-00:20, download=audiofile)\n",
+    "            # check langauge, WPM\n",
+    "            language = model.detectlanguage(audiofile)\n",
+    "            if language != 'english':\n",
+    "                spam=True\n",
+    "                continue\n",
     "\n",
     "    # if clean, save link to file\n",
     "    with open(,'a') as clean_links_file:\n",
