--- a/Data Gathering/classifier_train.ipynb
+++ b/Data Gathering/classifier_train.ipynb
@@ -18,16 +18,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\idmi\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import clip\n",
     "from PIL import Image\n",
@@ -35,7 +26,8 @@
     "import cv2\n",
     "import random\n",
     "from sklearn import svm as sklearn_svm\n",
-    "import pickle"
+    "import pickle\n",
+    "import random"
    ]
   },
   {
@@ -1038,6 +1030,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================================================missing 516\n",
+      "7570\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LOAD DATASET\n",
+    "\n",
+    "with open('spamham_samples/frames_labels.txt') as file:\n",
+    "    frames_labels = file.readlines()\n",
+    "    random.shuffle(frames_labels)\n",
+    "\n",
+    "\n",
+    "# load labels. ONLY LOAD 1 FRAME PER VIDEO\n",
+    "links = []\n",
+    "labels = []\n",
+    "for i in range(len(frames_labels)):\n",
+    "    link = frames_labels[i].split(',')[0]\n",
+    "    if not link in links:\n",
+    "        links.append(link)\n",
+    "        label = frames_labels[i].split(',')[1]\n",
+    "        labels.append(label)\n",
+    "\n",
+    "num_samples = len(frames_labels)\n",
+    "\n",
+    "# LOAD & ENCODE IMAGES\n",
+    "# from images, create image features from CLIP\n",
+    "x_image_features = []\n",
+    "y_labels = []\n",
+    "missing=0\n",
+    "for i in range(num_samples):\n",
+    "    try:\n",
+    "        image_name = 'spamham_samples/frames/' + ''.join(frames_labels[i].split(',')[0:-1]) + '.jpeg'\n",
+    "        with Image.open(image_name) as image:\n",
+    "            image = preprocess(image).unsqueeze(0).to(device)\n",
+    "        with th.no_grad():\n",
+    "            x_image_features.append(model.encode_image(image))\n",
+    "        y_labels.append(labels[i])\n",
+    "\n",
+    "        #display progress\n",
+    "        if i%(num_samples//100)==0:\n",
+    "            print('=',end='')\n",
+    "    except:\n",
+    "        missing+=1\n",
+    "        pass\n",
+    "x_image_features = th.cat(x_image_features)\n",
+    "print('missing',missing)\n",
+    "num_samples -= missing\n",
+    "print(num_samples)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -1045,119 +1097,129 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======================================================================================================\n"
+      "7570\n",
+      "torch.Size([7570, 1024])\n"
      ]
     }
    ],
    "source": [
-    "# LOAD DATASET\n",
-    "with open('spamham_samples/frames_labels.txt') as file:\n",
-    "    frames_labels = file.readlines()\n",
-    "    random.shuffle(frames_labels)\n",
-    "num_samples = len(frames_labels)\n",
-    "\n",
-    "# load labels\n",
-    "y_labels = []\n",
-    "for i in range(num_samples):\n",
-    "    label = frames_labels[i].split(',')[1]\n",
-    "    y_labels.append(label)\n",
-    "\n",
-    "# load images\n",
-    "# from images, create image features from CLIP\n",
-    "x_image_features = th.zeros([num_samples, 1024]).to(device)\n",
-    "for i in range(num_samples):\n",
-    "    image_name = 'spamham_samples/frames/' + frames_labels[i].split(',')[0] + '.jpeg'\n",
-    "    with Image.open(image_name) as image:\n",
-    "        image = preprocess(image).unsqueeze(0).to(device)\n",
-    "    with th.no_grad():\n",
-    "        x_image_features[i,:] = model.encode_image(image)\n",
-    "\n",
-    "    if i%(num_samples//100)==0:\n",
-    "        print('=',end='')\n",
-    "print()\n",
-    "\n"
+    "print(len(y_labels))\n",
+    "print(x_image_features.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([7570, 1024])\n",
+      "7570\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save image feature dataset for faster use later just in case\n",
+    "#th.save(x_image_features, 'x_image_features_3')\n",
+    "#th.save(y_labels, 'y_labels_3')\n",
+    "\n",
+    "x_image_features = th.load('x_image_features_3')\n",
+    "y_labels = th.load('y_labels_3')\n",
+    "\n",
+    "print(x_image_features.shape)\n",
+    "print(len(y_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "# turn to CPU train/test features for SVM\n",
+    "import numpy as np\n",
     "split=0.9\n",
-    "x_train = x_image_features[int(num_samples*split):].cpu()\n",
-    "y_train = y_labels[int(num_samples*split):]\n",
-    "x_test = x_image_features[:int(num_samples*split)].cpu()\n",
-    "y_test = y_labels[:int(num_samples*split)]"
+    "#y_labels = np.asarray(y_labels)\n",
+    "#y_labels[y_labels==3]=2\n",
+    "#y_labels = y_labels.tolist()\n",
+    "x_train = x_image_features[:int(num_samples*split)].cpu()\n",
+    "y_train = y_labels[:int(num_samples*split)]\n",
+    "x_test = x_image_features[int(num_samples*split):].cpu()\n",
+    "y_test = y_labels[int(num_samples*split):]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save image feature dataset for faster use later just in case\n",
-    "#th.save(x_image_features, 'x_image_features')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for final training, train on whole dataset\n",
-    "#x_train = x_image_features.cpu()\n",
-    "#y_train = y_labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "### INITIALIZE SVM\n",
-    "svm = sklearn_svm.SVC(kernel='rbf', gamma='scale', C=8)"
+    "svm = sklearn_svm.SVC(kernel='rbf', gamma='scale', C=8)\n",
+    "#svm = pickle.load(open('SVM4', 'rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9008035831906205"
+       "SVC(C=8)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svm.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.750330250990753"
+      ]
+     },
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# FIT SVM TO IMAGE FEATURES -> LABELS\n",
-    "svm.fit(x_train, y_train)\n",
     "svm.score(x_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(svm, open('SVM', 'wb'))"
+    "# for final training, train on whole dataset\n",
+    "x_train = x_image_features.cpu()\n",
+    "y_train = y_labels\n",
+    "svm.fit(x_train, y_train)\n",
+    "pickle.dump(svm, open('SVM4', 'wb'))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1171,12 +1233,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0429f5790f7afdb46a7693d7d6789f5f0371dde477c905151d2be446e3532ec8"
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
    }
   }
  },
