--- a/VLPT/requirements.ipynb
+++ b/VLPT/requirements.ipynb
@@ -166,22 +166,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "############################################### LINUX\n",
+    "import sys, os\n",
     "modify_transfo_xl_files = True\n",
     "if modify_transfo_xl_files:\n",
     "\n",
     "    transfo_xl_dir = sys.exec_prefix + \"/lib/python3.8/site-packages/transformers/models/transfo_xl/\"\n",
     "\n",
     "    modelling_name = 'modeling_transfo_xl.py'\n",
-    "    #os.rename(transfo_xl_dir+modelling_name , transfo_xl_dir+modelling_name+'.bak')\n",
+    "    os.rename(transfo_xl_dir+modelling_name , transfo_xl_dir+modelling_name+'.bak')\n",
     "    os.system( 'cp '+modelling_name +' '+ transfo_xl_dir+modelling_name)\n",
     "\n",
     "    utilities_name = 'modeling_transfo_xl_utilities.py'\n",
-    "    #os.rename(transfo_xl_dir+utilities_name , transfo_xl_dir+utilities_name+'.bak')\n",
+    "    os.rename(transfo_xl_dir+utilities_name , transfo_xl_dir+utilities_name+'.bak')\n",
     "    os.system( 'cp '+utilities_name +' '+ transfo_xl_dir+utilities_name)"
    ]
   },
@@ -331,7 +332,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "minerl",
    "language": "python",
    "name": "python3"
   },
@@ -345,11 +346,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+    "hash": "44f58b348a4d2991bb9cc32651780e86abd4fe788463c217caf1a9850410ed63"
    }
   }
  },
