--- a/VLPT/requirements.ipynb
+++ b/VLPT/requirements.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Collecting git+https://github.com/minerllabs/minerl@v1.0.0\n",
-      "  Cloning https://github.com/minerllabs/minerl (to revision v1.0.0) to c:\\users\\gppl20\\appdata\\local\\temp\\pip-req-build-n0ajtxgi\n",
+      "  Cloning https://github.com/minerllabs/minerl (to revision v1.0.0) to c:\\users\\gppl20\\appdata\\local\\temp\\pip-req-build-hcou__r0\n",
       "  Resolved https://github.com/minerllabs/minerl to commit c0e07f204ae45982536dba85701c094695641e0b\n"
      ]
     },
@@ -131,19 +131,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone -q https://github.com/minerllabs/minerl 'C:\\Users\\gppl20\\AppData\\Local\\Temp\\pip-req-build-n0ajtxgi'\n",
+      "  Running command git clone -q https://github.com/minerllabs/minerl 'C:\\Users\\gppl20\\AppData\\Local\\Temp\\pip-req-build-hcou__r0'\n",
       "  Running command git checkout -b v1.0.0 --track origin/v1.0.0\n",
       "  branch 'v1.0.0' set up to track 'origin/v1.0.0'.\n",
       "  Switched to a new branch 'v1.0.0'\n",
       "    ERROR: Command errored out with exit status 1:\n",
-      "     command: 'C:\\ProgramData\\Anaconda3\\python.exe' -c 'import io, os, sys, setuptools, tokenize; sys.argv[0] = '\"'\"'C:\\\\Users\\\\gppl20\\\\AppData\\\\Local\\\\Temp\\\\pip-req-build-n0ajtxgi\\\\setup.py'\"'\"'; __file__='\"'\"'C:\\\\Users\\\\gppl20\\\\AppData\\\\Local\\\\Temp\\\\pip-req-build-n0ajtxgi\\\\setup.py'\"'\"';f = getattr(tokenize, '\"'\"'open'\"'\"', open)(__file__) if os.path.exists(__file__) else io.StringIO('\"'\"'from setuptools import setup; setup()'\"'\"');code = f.read().replace('\"'\"'\\r\\n'\"'\"', '\"'\"'\\n'\"'\"');f.close();exec(compile(code, __file__, '\"'\"'exec'\"'\"'))' egg_info --egg-base 'C:\\Users\\gppl20\\AppData\\Local\\Temp\\pip-pip-egg-info-0k4pqhpn'\n",
-      "         cwd: C:\\Users\\gppl20\\AppData\\Local\\Temp\\pip-req-build-n0ajtxgi\\\n",
+      "     command: 'C:\\ProgramData\\Anaconda3\\python.exe' -c 'import io, os, sys, setuptools, tokenize; sys.argv[0] = '\"'\"'C:\\\\Users\\\\gppl20\\\\AppData\\\\Local\\\\Temp\\\\pip-req-build-hcou__r0\\\\setup.py'\"'\"'; __file__='\"'\"'C:\\\\Users\\\\gppl20\\\\AppData\\\\Local\\\\Temp\\\\pip-req-build-hcou__r0\\\\setup.py'\"'\"';f = getattr(tokenize, '\"'\"'open'\"'\"', open)(__file__) if os.path.exists(__file__) else io.StringIO('\"'\"'from setuptools import setup; setup()'\"'\"');code = f.read().replace('\"'\"'\\r\\n'\"'\"', '\"'\"'\\n'\"'\"');f.close();exec(compile(code, __file__, '\"'\"'exec'\"'\"'))' egg_info --egg-base 'C:\\Users\\gppl20\\AppData\\Local\\Temp\\pip-pip-egg-info-yr7jgi7y'\n",
+      "         cwd: C:\\Users\\gppl20\\AppData\\Local\\Temp\\pip-req-build-hcou__r0\\\n",
       "    Complete output (15 lines):\n",
       "    Traceback (most recent call last):\n",
       "      File \"<string>\", line 1, in <module>\n",
-      "      File \"C:\\Users\\gppl20\\AppData\\Local\\Temp\\pip-req-build-n0ajtxgi\\setup.py\", line 215, in <module>\n",
+      "      File \"C:\\Users\\gppl20\\AppData\\Local\\Temp\\pip-req-build-hcou__r0\\setup.py\", line 215, in <module>\n",
       "        prep_mcp()\n",
-      "      File \"C:\\Users\\gppl20\\AppData\\Local\\Temp\\pip-req-build-n0ajtxgi\\setup.py\", line 136, in prep_mcp\n",
+      "      File \"C:\\Users\\gppl20\\AppData\\Local\\Temp\\pip-req-build-hcou__r0\\setup.py\", line 136, in prep_mcp\n",
       "        setup_output = subprocess.check_output(['bash.exe', 'setup_mcp.sh']).decode()\n",
       "      File \"C:\\ProgramData\\Anaconda3\\lib\\subprocess.py\", line 424, in check_output\n",
       "        return run(*popenargs, stdout=PIPE, timeout=timeout, check=True,\n",
@@ -332,7 +332,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "minerl",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -346,11 +346,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "44f58b348a4d2991bb9cc32651780e86abd4fe788463c217caf1a9850410ed63"
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
    }
   }
  },
