Update repo with latest files from Google Drive

--- a/Data Gathering/clean_link_finder.ipynb
+++ b/Data Gathering/clean_link_finder.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "############################################################################################### THE POINT OF THE FOLLOWING CODE IS TO GET A BUNCH OF MINECRAFT-RELATED VIDEO LINKS. THAT IS IT. get the from YT search and manual selection. account for whats already beens een before adding something."
+    "############################################################################################### The point of the following code is to get a bunch of links to clean Minecraft videos. get the initial links from YT search and manual selection. account for whats already been seen before adding something."
    ]
   },
   {
@@ -330,7 +330,7 @@
     "    for link in all_links_seen:\n",
     "        file.write(link+'\\n')\n",
     "\n",
-    "############################################################################################################################################ FINISH GETTINGS LINKS WORTH CHECKING. WRITE LINK TO FILE\n"
+    "############################################################################################################################################ finish gettings links worth checking. write link to file\n"
    ]
   },
   {
@@ -454,7 +454,7 @@
     }
    ],
    "source": [
-    "############################################################################################################################################  FROM SEEN LINKS THAT HAVE NOT BEEN CLASSIFIED, ONE AT A TIME, GET YT_SEARCH METADATA FROM IT ONLINE, CHCK IS FOR SPAM/HAM, CLASSIFY AND SEND TO APPROPRIATE FILE.\n",
+    "############################################################################################################################################  from seen links that have not been classified, one at a time, get yt_search metadata for it online, check it for spam/ham, classify, and send to appropriate file.\n",
     "\n",
     "# from seen links and spam/ham so far, get list of links that need to be classified\n",
     "import random\n",
@@ -1509,7 +1509,7 @@
     "# CHECK HAM/SPAM ON EMTADATA, THEN VIDEO, THEN AUDIO\n",
     "\n",
     "\n",
-    "# load target LM's tokenizer for checking WPM as tokens/ms\n",
+    "# load target LM's tokenizer for checking WPM as tokens/ms  --- note: not implemented in the end\n",
     "import pycld2 as cld2\n",
     "from transformers import TransfoXLTokenizer\n",
     "import re\n",
